--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 									</header>
 									<p>天使是天堂的惡魔，惡魔是地獄的天使。人們心中的天使是神聖的，偉大的，他能給人們帶來和平與愛！生活在美麗的天堂。心地善良，給人們帶來希望。惡魔就恰恰相反，兇狠殘暴，他們只會帶來無盡的災難。生活在地獄，他們生性殘暴，給人們帶來災禍。</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="generic.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -115,7 +115,7 @@
 									</header>
 									<p>叛逆心理是指人們為了維護自尊，而對對方的要求採取相反的態度和言行的一種心理狀態。叛逆心理是青少年成長過程中經常會出現的一種心理狀態，是該年齡階段青少年的一個突出的心理特點。</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="generic2.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -133,7 +133,7 @@
 									</header>
 									<p>爬山本身是一件孤獨的事情，走路，背東西，很多時刻要自己去克服。我很喜歡靜靜走在山裡面跟自己對話，是一種療癒的過程。我們在城市裡接收到很多雜訊，被各種任務捆綁，需要有一個暫時隔離獨處的空間，去重新開機，回歸最純粹原始的狀態。</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="generic3.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -151,7 +151,7 @@
 									</header>
 									<p>尼古丁就像其他麻醉劑一樣，剛開始吸食時並不適應，會引起胸悶、噁心、頭暈等不適，但如果吸菸時間久了，血液中的尼古丁達到一定濃度，反覆刺激大腦並使各器官產生對尼古丁的依賴性，此時菸癮就纏身了。若停止吸菸，會暫時出現煩躁、失眠、厭食等所謂的「戒斷症狀」，加上很多吸菸者對菸草產生一種心理上的依賴，認為吸菸可以提神、解悶、消除疲勞等，所以菸癮越來越大，欲罷不能。這種心理依賴導致吸菸者的一種行為依賴，使得吸菸者感到戒菸困難甚大，無形中增加了戒菸的難度。</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="generic4.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -168,7 +168,7 @@
 									</header>
 									<p>叢林通常指熱帶地區中的茂密森林，技術上形容為有很大的生物多樣性和植物茂密的森林。叢林分布於赤道和熱帶氣候的地區，而叢林亦和雨林的穩定生長的前階段有聯繫。有些人認為叢林這個字的使用並不盡是對自然棲息地的中立描述，反而是指社會建構主義（文化想像的一部分）。在美術和文學上，可以找到很多有這個概念的例子。</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="generic5.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
